--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Weather App</title>
 </head>
 <body>
-    <h1>Weather</h1>
+    <div id="top-container" class="container">Top Container</div>
+    <div id="bottom-container" class="container">Bottom Container</div>
 </body>
 </html>
