Using the cat API tutorial from the Odin Project

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Weather App</title>
 </head>
 <body>
-    <div id="top-container" class="container">Top Container</div>
+    <div id="top-container" class="container">Top Container
+        <img src="#">
+    </div>
     <div id="bottom-container" class="container">Bottom Container</div>
 </body>
 </html>
