Weather app fetches current weather conditions and displays in the DOM

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <div id="top-container" class="container">Top Container
         <img src="#">
     </div>
-    <div id="bottom-container" class="container">Bottom Container</div>
+    <div id="bottom-container" class="container">
+        <div id="city"></div>
+        <div id="temperature"></div>
+        <div id="wind-speed"></div>
+        <div id="wind-direction"></div>
+        <div id="precipitation"></div>
+    </div>
 </body>
 </html>
