Added search box for city

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 <body>
     <div id="top-container" class="container">Top Container
         <img src="#">
+        <div id="search-container">
+            <label id="label-input-box-city">Search For City: </label>
+            <input id="input-box-city">
+            <button type="button" id="submit">Submit</button>
+        </div>
     </div>
     <div id="bottom-container" class="container">
         <div id="city"></div>
