Clicking Submit button will get weather data, now need it to get a city's specific weather data

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div id="top-container" class="container">Top Container
         <img src="#">
         <div id="search-container">
-            <label id="label-input-box-city">Search For City: </label>
-            <input id="input-box-city">
+            <label for="input-box-city" id="label-input-box-city">Search For City: </label>
+            <input id="input-box-city" name="input-box-city" type="text" minlength="2">
             <button type="button" id="submit">Submit</button>
         </div>
     </div>
